# mmwincompat

./: CMakeLists.txt  LICENSE  README.md  configure  libmmwincompat.c
include/: mmwincompat.h
